<resources>
    <string name="app_name">Shopping List</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="shop_name_hint">Shop Name</string>
    <string name="product_name_hint">Product Name</string>
    <string name="shop_desc_hint">Shop Description</string>
    <string name="shop_radius_hint">Shop Radius</string>
    <string name="product_price_hint">Price</string>
    <string name="product_quantity_hint">Quantity</string>
    <string name="your_list">Your List</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="currency">Currency</string>
    <string name="EUR">EUR</string>
    <string name="PLN">PLN</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="shops">Shops</string>
    <string name="map">Map</string>
    <string name="title_activity_map">Map</string>
    <string name="channel_name">SHOPPING LIST CHANNEL</string>
    <string name="channelID">SHOPPING LIST ID</string>
    <string name="channel_description">\"Shopping list app group notification channel\"</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="website">Website</string>
    <string name="next_photo">Next Photo</string>
    <string name="play_pause">Play/Pause</string>
    <string name="stop">Stop</string>
    <string name="next_song">Next Song</string>
    <string name="not_playing">Not playing</string>
</resources>