<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/yourList"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/your_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="onYourListClick"
        />

    <Button
        android:id="@+id/shops"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="35dp"
        android:text="@string/shops"
        app:layout_constraintStart_toStartOf="@+id/yourList"
        app:layout_constraintTop_toBottomOf="@+id/yourList"
        android:onClick="onShopsClick"
        />

    <Button
        android:id="@+id/map"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="35dp"
        android:text="@string/map"
        app:layout_constraintStart_toStartOf="@+id/shops"
        app:layout_constraintTop_toBottomOf="@+id/shops"
        android:onClick="onMapClick"
    />

    <Button
        android:id="@+id/settings"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="35dp"
        android:text="@string/settings"
        app:layout_constraintStart_toStartOf="@+id/map"
        app:layout_constraintTop_toBottomOf="@+id/map"
        android:onClick="onSettingsClick"
        />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="35dp"
        android:text="@string/sign_in"
        app:layout_constraintStart_toStartOf="@+id/settings"
        app:layout_constraintTop_toBottomOf="@+id/settings"
        android:onClick="onSignInClick"
        />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="35dp"
        android:text="@string/sign_up"
        app:layout_constraintStart_toStartOf="@+id/sign_in_btn"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
        android:onClick="onSignUpClick"
        />


    <Button
        android:id="@+id/sign_out_btn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="35dp"
        android:text="@string/sign_out"
        app:layout_constraintStart_toStartOf="@+id/sign_up_btn"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn"
        android:onClick="onSignOutClick"
        />
</androidx.constraintlayout.widget.ConstraintLayout>