<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints="Product Name"
            android:inputType="text"
            android:layout_margin="40dp"
            android:hint="@string/product_name_hint"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="40dp"
        android:weightSum="2"
        >

        <EditText
            android:id="@+id/itemPrice"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            android:layout_height="60dp"
            android:hint="@string/product_price_hint"
            android:inputType="numberDecimal"
            />

        <EditText
            android:id="@+id/itemQuantity"

            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_margin="10dp"

            android:layout_height="60dp"
            android:hint="@string/product_quantity_hint"
            android:inputType="number"
            />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="40dp"
            android:weightSum="2"
        >

            <Button
                android:id="@+id/cancelButton"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="10dp"
                android:onClick="onCancelClick"
                android:text="@string/cancel"
            />
            <Button
                android:id="@+id/acceptButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:onClick="onOKClick"
                android:text="@string/ok"

            />
    </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>