<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/email_login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="@+id/email_login"
        app:layout_constraintTop_toBottomOf="@+id/email_login"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:text="@string/Login"
        app:layout_constraintStart_toStartOf="@+id/password_login"
        app:layout_constraintTop_toBottomOf="@+id/password_login"
        android:onClick="onLoginClick"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
